force-app/main/default/objects/Working_Hours__c/Working_Hours__c.object-meta.xml
<CustomObject>
    <label>Working Hours</label>
    <nameField>
        <label>employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Working Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>