force-app/main/default/objects/Working_Hours__c/fields/Extra_hours_work_in_a_week__c.field-meta.xml
<CustomField>
    <fullName>Extra_hours_work_in_a_week__c</fullName>
    <formula>IF( No_of_hours_worked_in_a_week__c  &gt;  work_hours_per_week__c ,  No_of_hours_worked_in_a_week__c  -  work_hours_per_week__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra hours work in a week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>