force-app/main/default/objects/Working_Hours__c/fields/No_of_hours_worked_in_a_week__c.field-meta.xml
<CustomField>
    <fullName>No_of_hours_worked_in_a_week__c</fullName>
    <formula>Monday__c   +  Tuesday__c  +  Wednesday__c  +  Thursday__c  +  Friday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of hours worked in a week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>