force-app/main/default/objects/Working_Hours__c/fields/Thursday__c.field-meta.xml
<CustomField>
    <fullName>Thursday__c</fullName>
    <label>Thursday</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>