force-app/main/default/objects/Working_Hours__c/fields/work_hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>work_hours_per_week__c</fullName>
    <label>work hours per week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>